# runx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/lowfat/: Cargo.toml
crates/lowfat-core/: Cargo.toml
crates/lowfat-core/benches/: core_bench.rs
crates/lowfat-core/src/: config.rs  db.rs  level.rs  lib.rs  pipeline.rs  tee.rs  tokens.rs
crates/lowfat-plugin/: Cargo.toml
crates/lowfat-plugin/benches/: plugin_bench.rs
crates/lowfat-plugin/src/: discovery.rs  lib.rs  manifest.rs  plugin.rs  security.rs
crates/lowfat-runner/: Cargo.toml
crates/lowfat-runner/benches/: runner_bench.rs
crates/lowfat-runner/src/: lib.rs  process.rs  runner.rs
crates/lowfat-runner/tests/: e2e_plugin.rs
crates/lowfat/src/: main.rs
crates/lowfat/src/commands/: audit.rs  candidates.rs  filters.rs  gain.rs  help.rs  history_export.rs  hook.rs  level.rs  mod.rs  pipeline.rs  plugin.rs  run.rs  shell_init.rs  status.rs
crates/lowfat/src/filters/: docker.rs  git.rs  ls.rs  mod.rs
docs/: PLUGINS.md  demo-levels.tape  demo-setup.sh  demo.tape
plugins/cargo/cargo-compact/: bench.sh  filter.sh  lowfat.toml
plugins/cargo/cargo-compact/samples/: cargo-build-full.txt  cargo-clippy-full.txt  cargo-test-full.txt
plugins/docker/docker-compact/: BENCHMARK.md  bench.sh  filter.sh  lowfat.toml
plugins/docker/docker-compact/samples/: docker-images-full.txt  docker-ps-full.txt
plugins/git/git-compact/: BENCHMARK.md  bench.sh  filter.sh  lowfat.toml
plugins/git/git-compact/samples/: git-diff-full.txt  git-log-full.txt  git-show-full.txt  git-status-full.txt
plugins/go/go-compact/: BENCHMARK.md  bench.sh  filter.sh  lowfat.toml
plugins/go/go-compact/samples/: go-build-ultra.txt  go-test-ultra.txt
plugins/ls/ls-compact/: BENCHMARK.md  bench.sh  filter.sh  lowfat.toml
plugins/ls/ls-compact/samples/: ls-output-full.txt
plugins/npm/npm-compact/: BENCHMARK.md  bench.sh  filter.sh  lowfat.toml
plugins/npm/npm-compact/samples/: npm-audit-ultra.txt  npm-install-full.txt  npm-test-ultra.txt
