[package]
name = "lowfat-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin runners (process, future: WASM) for lowfat"

[dependencies]
lowfat-core = { workspace = true }
lowfat-plugin = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "runner_bench"
harness = false
